...
        }
    }
    func initButton() {
        completeButton.rx.tap
            .bind {
                // 첫화면으로 전환
                guard let tabBarController = UIStoryboard(name: "gomin", bundle: nil).instantiateViewController(identifier: "TabBarController") as? UITabBarController else {return}
                self.navigationController?.pushViewController(tabBarController, animated: true)
            }
            .disposed(by: disposeBag)
    }
}

